--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.gmail.shurastarkov2014.lesson1"
+        applicationId "com.example.androidproject"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -31,4 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
