--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.androidproject">
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -17,7 +18,7 @@
             </intent-filter>
         </activity>
         <service
-            android:name=".SimpleService"
+            android:name=".MyService"
             android:enabled="true"
             android:exported="true" >
         </service>
