--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <receiver android:name=".BirthdayAlarmReceiver" />
     </application>
 
 </manifest>
